--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "acaa1679",
+   "id": "2f31f82f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,9 +11,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b97cc63a",
+   "metadata": {},
+   "source": [
+    "## The ultimate goal of this project is to think of ways to improve collaboration throughout the company. \n",
+    "\n",
+    "#### Create a report that covers the following:  \n",
+    "####  1. Which departments are the most/least active?\n",
+    "####  2. Which employee has the most connections? \n",
+    "####  3. Identify the most influential departments and employees.\n",
+    "####  4. Using the network analysis, in which departments would you recommend the HR team focus to boost collaboration?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "27885394",
+   "id": "7511f9da",
    "metadata": {},
    "outputs": [
     {
