--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "954c8b24",
+   "id": "cbf5f0af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "120e0228",
+   "id": "4fa18850",
    "metadata": {},
    "source": [
     "## The ultimate goal of this project is to think of ways to improve collaboration throughout the company. \n",
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "70b557a3",
+   "id": "7a8ad229",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "f9810a82",
+   "execution_count": 46,
+   "id": "a36effb4",
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "[3512 rows x 12 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a99d01ae",
+   "id": "2a773b71",
    "metadata": {},
    "source": [
     "### Which departments are the most/least active?"
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "16189ed9",
+   "id": "b6acc1d6",
    "metadata": {},
    "outputs": [
     {
@@ -409,6 +409,7 @@
     }
    ],
    "source": [
+    "# Here we aggregate how many times a person from the department sent a message (column which to aggregate doesn't matter since we only wanted count)\n",
     "sender = df2.groupby(['department_sender']).agg({'sender': 'count'}).reset_index()\n",
     "receiver = df2.groupby(['department_receiver']).agg({'receiver': 'count'}).reset_index()\n",
     "\n",
@@ -419,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "3a07c006",
+   "id": "0d97ef62",
    "metadata": {
     "scrolled": false
    },
@@ -1453,7 +1454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "897e57cb",
+   "id": "bb7260bb",
    "metadata": {},
    "source": [
     "### Graph Analysis\n",
@@ -1461,17 +1462,422 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ed136c7",
+   "cell_type": "markdown",
+   "id": "cb0f1e5f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Which employee has the most connections?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "id": "8be1f02b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>messages_sent</th>\n",
+       "      <th>messages_received</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>598</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>144</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>128</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>605</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>586</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>657</th>\n",
+       "      <td>706</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>658</th>\n",
+       "      <td>685</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>659</th>\n",
+       "      <td>681</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>660</th>\n",
+       "      <td>680</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>663</th>\n",
+       "      <td>1890</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>664 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       id  messages_sent  messages_received\n",
+       "0     598           77.0                7.0\n",
+       "1     144           75.0                3.0\n",
+       "2     128           71.0                4.0\n",
+       "3     605           68.0                3.0\n",
+       "4     586           64.0                1.0\n",
+       "..    ...            ...                ...\n",
+       "657   706            0.0                1.0\n",
+       "658   685            0.0                1.0\n",
+       "659   681            0.0                1.0\n",
+       "660   680            0.0                1.0\n",
+       "663  1890            0.0                1.0\n",
+       "\n",
+       "[664 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# To find employee with most connections, we need to make sure the sender and the receiver can't be repeated (since it would only counted as 'knowing' one person)\n",
+    "# So we need to filter out these rows by picking sender and receiver, message_length is a randomly picked column for us to count later\n",
+    "connection = df2[['sender', 'receiver', 'message_length']]\n",
+    "connection = connection.sort_values('message_length').drop_duplicates(subset=['sender', 'receiver'], keep='last')\n",
+    "\n",
+    "\n",
+    "# Count the number of (distinct) sender and receiver\n",
+    "connection_sender = connection.groupby(['sender']).agg({'message_length': 'count'}).sort_values(by=['message_length'], ascending=False).reset_index().rename(columns={'message_length': 'count'})\n",
+    "connection_receiver = connection.groupby(['receiver']).agg({'message_length': 'count'}).sort_values(by=['message_length'], ascending=False).reset_index().rename(columns={'message_length': 'count', 'receiver': 'sender'})\n",
+    "connection_sender_receiver = connection_sender.merge(connection_receiver, on='sender', how='outer').rename(columns={'sender': 'id', 'count_x': 'messages_sent', 'count_y': 'messages_received'}).fillna(0)\n",
+    "connection_sender_receiver = connection_sender_receiver.sort_values(by='messages_sent', ascending=False)\n",
+    "connection_sender_receiver.sort_values(by='messages_sent', ascending=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "fa5b4fb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sender</th>\n",
+       "      <th>receiver</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>message_length</th>\n",
+       "      <th>id_sender</th>\n",
+       "      <th>department_sender</th>\n",
+       "      <th>location_sender</th>\n",
+       "      <th>age_sender</th>\n",
+       "      <th>id_receiver</th>\n",
+       "      <th>department_receiver</th>\n",
+       "      <th>location_receiver</th>\n",
+       "      <th>age_receiver</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>598</td>\n",
+       "      <td>32</td>\n",
+       "      <td>2021-06-13T19:24:27.000Z</td>\n",
+       "      <td>64</td>\n",
+       "      <td>598</td>\n",
+       "      <td>Operations</td>\n",
+       "      <td>US</td>\n",
+       "      <td>38</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>598</td>\n",
+       "      <td>32</td>\n",
+       "      <td>2021-06-27T04:45:21.000Z</td>\n",
+       "      <td>80</td>\n",
+       "      <td>598</td>\n",
+       "      <td>Operations</td>\n",
+       "      <td>US</td>\n",
+       "      <td>38</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>598</td>\n",
+       "      <td>32</td>\n",
+       "      <td>2021-06-27T22:29:48.000Z</td>\n",
+       "      <td>35</td>\n",
+       "      <td>598</td>\n",
+       "      <td>Operations</td>\n",
+       "      <td>US</td>\n",
+       "      <td>38</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128</th>\n",
+       "      <td>598</td>\n",
+       "      <td>88</td>\n",
+       "      <td>2021-07-08T16:15:20.000Z</td>\n",
+       "      <td>43</td>\n",
+       "      <td>598</td>\n",
+       "      <td>Operations</td>\n",
+       "      <td>US</td>\n",
+       "      <td>38</td>\n",
+       "      <td>88</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>US</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>372</th>\n",
+       "      <td>598</td>\n",
+       "      <td>834</td>\n",
+       "      <td>2021-06-27T05:59:05.000Z</td>\n",
+       "      <td>16</td>\n",
+       "      <td>598</td>\n",
+       "      <td>Operations</td>\n",
+       "      <td>US</td>\n",
+       "      <td>38</td>\n",
+       "      <td>834</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>France</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3042</th>\n",
+       "      <td>598</td>\n",
+       "      <td>1474</td>\n",
+       "      <td>2021-07-22T04:17:46.000Z</td>\n",
+       "      <td>30</td>\n",
+       "      <td>598</td>\n",
+       "      <td>Operations</td>\n",
+       "      <td>US</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1474</td>\n",
+       "      <td>Engineering</td>\n",
+       "      <td>US</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3043</th>\n",
+       "      <td>598</td>\n",
+       "      <td>1290</td>\n",
+       "      <td>2021-07-10T06:22:26.000Z</td>\n",
+       "      <td>40</td>\n",
+       "      <td>598</td>\n",
+       "      <td>Operations</td>\n",
+       "      <td>US</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1290</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3044</th>\n",
+       "      <td>598</td>\n",
+       "      <td>1517</td>\n",
+       "      <td>2021-07-12T00:02:19.000Z</td>\n",
+       "      <td>15</td>\n",
+       "      <td>598</td>\n",
+       "      <td>Operations</td>\n",
+       "      <td>US</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1517</td>\n",
+       "      <td>Admin</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3046</th>\n",
+       "      <td>598</td>\n",
+       "      <td>1538</td>\n",
+       "      <td>2021-07-13T02:10:30.000Z</td>\n",
+       "      <td>32</td>\n",
+       "      <td>598</td>\n",
+       "      <td>Operations</td>\n",
+       "      <td>US</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1538</td>\n",
+       "      <td>Operations</td>\n",
+       "      <td>US</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3047</th>\n",
+       "      <td>598</td>\n",
+       "      <td>1562</td>\n",
+       "      <td>2021-07-14T06:54:44.000Z</td>\n",
+       "      <td>10</td>\n",
+       "      <td>598</td>\n",
+       "      <td>Operations</td>\n",
+       "      <td>US</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1562</td>\n",
+       "      <td>Engineering</td>\n",
+       "      <td>US</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>187 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      sender  receiver                 timestamp  message_length  id_sender  \\\n",
+       "93       598        32  2021-06-13T19:24:27.000Z              64        598   \n",
+       "94       598        32  2021-06-27T04:45:21.000Z              80        598   \n",
+       "95       598        32  2021-06-27T22:29:48.000Z              35        598   \n",
+       "128      598        88  2021-07-08T16:15:20.000Z              43        598   \n",
+       "372      598       834  2021-06-27T05:59:05.000Z              16        598   \n",
+       "...      ...       ...                       ...             ...        ...   \n",
+       "3042     598      1474  2021-07-22T04:17:46.000Z              30        598   \n",
+       "3043     598      1290  2021-07-10T06:22:26.000Z              40        598   \n",
+       "3044     598      1517  2021-07-12T00:02:19.000Z              15        598   \n",
+       "3046     598      1538  2021-07-13T02:10:30.000Z              32        598   \n",
+       "3047     598      1562  2021-07-14T06:54:44.000Z              10        598   \n",
+       "\n",
+       "     department_sender location_sender  age_sender  id_receiver  \\\n",
+       "93          Operations              US          38           32   \n",
+       "94          Operations              US          38           32   \n",
+       "95          Operations              US          38           32   \n",
+       "128         Operations              US          38           88   \n",
+       "372         Operations              US          38          834   \n",
+       "...                ...             ...         ...          ...   \n",
+       "3042        Operations              US          38         1474   \n",
+       "3043        Operations              US          38         1290   \n",
+       "3044        Operations              US          38         1517   \n",
+       "3046        Operations              US          38         1538   \n",
+       "3047        Operations              US          38         1562   \n",
+       "\n",
+       "     department_receiver location_receiver  age_receiver  \n",
+       "93                 Sales                UK            54  \n",
+       "94                 Sales                UK            54  \n",
+       "95                 Sales                UK            54  \n",
+       "128                   IT                US            23  \n",
+       "372                   IT            France            29  \n",
+       "...                  ...               ...           ...  \n",
+       "3042         Engineering                US            24  \n",
+       "3043                  IT                UK            29  \n",
+       "3044               Admin           Germany            58  \n",
+       "3046          Operations                US            55  \n",
+       "3047         Engineering                US            32  \n",
+       "\n",
+       "[187 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2[df2.sender == 598]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0b4b8b85",
+   "id": "d2654615",
    "metadata": {},
    "outputs": [
     {
@@ -1575,7 +1981,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "afeba49e",
+   "id": "16c69a51",
    "metadata": {},
    "outputs": [
     {
