--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c9d4319e",
+   "id": "531486f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6ba9d16",
+   "id": "76af7473",
    "metadata": {},
    "source": [
     "## The ultimate goal of this project is to think of ways to improve collaboration throughout the company. \n",
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2ff76e51",
+   "id": "2cade636",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "23b7ff00",
+   "id": "0b1dc002",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e163bbee",
+   "id": "b1724fc5",
    "metadata": {},
    "source": [
     "## Which departments are the most/least active?"
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "951241eb",
+   "id": "9f443538",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "005b4ca6",
+   "id": "f58f2818",
    "metadata": {
     "scrolled": false
    },
@@ -1540,7 +1540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ef74dfb",
+   "id": "09afeccc",
    "metadata": {},
    "source": [
     "### Graph Analysis (Which departments are the most/least active?)\n",
@@ -1549,7 +1549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2d53d91",
+   "id": "2b82e714",
    "metadata": {},
    "source": [
     "## Which employee has the most connections?"
@@ -1558,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5185f4a6",
+   "id": "2e20d3cb",
    "metadata": {},
    "outputs": [
     {
@@ -1722,7 +1722,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0132b859",
+   "id": "92e56bee",
    "metadata": {},
    "outputs": [
     {
@@ -4904,7 +4904,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdad2fc2",
+   "id": "46b6393e",
    "metadata": {},
    "source": [
     "### Graph Analysis (Which employee has the most connections?)\n",
@@ -4915,7 +4915,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dc5bf4e",
+   "id": "171efed2",
    "metadata": {},
    "source": [
     "## Identify the most influential departments and employees."
@@ -4924,7 +4924,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "c2e2cd9c",
+   "id": "06653429",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4941,7 +4941,7 @@
   {
    "cell_type": "code",
    "execution_count": 336,
-   "id": "3435f0a3",
+   "id": "feefb618",
    "metadata": {},
    "outputs": [
     {
@@ -5892,7 +5892,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "276ac2e1",
+   "id": "5e56f8a9",
    "metadata": {},
    "source": [
     "##### We can say that the Sales department exerts the most influence over any other departments. Closely followed by Operations department and then the Admin department. Marketing department exerts the least amount of influences over other department, again very similar to the Engineering and IT departments."
@@ -5900,12 +5900,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
-   "id": "6d838f85",
+   "execution_count": 375,
+   "id": "ea5c7dfe",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sender</th>\n",
+       "      <th>number_messages</th>\n",
+       "      <th>department</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>605</td>\n",
+       "      <td>392</td>\n",
+       "      <td>Admin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>509</td>\n",
+       "      <td>145</td>\n",
+       "      <td>Admin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1274</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Admin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>516</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Engineering</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>370</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Engineering</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1879</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Engineering</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1500</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Marketing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1299</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Marketing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>977</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Marketing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>221</td>\n",
+       "      <td>18</td>\n",
+       "      <td>IT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1054</td>\n",
+       "      <td>7</td>\n",
+       "      <td>IT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>326</td>\n",
+       "      <td>6</td>\n",
+       "      <td>IT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>598</td>\n",
+       "      <td>162</td>\n",
+       "      <td>Operations</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>586</td>\n",
+       "      <td>144</td>\n",
+       "      <td>Operations</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>317</td>\n",
+       "      <td>141</td>\n",
+       "      <td>Operations</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>144</td>\n",
+       "      <td>153</td>\n",
+       "      <td>Sales</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>128</td>\n",
+       "      <td>145</td>\n",
+       "      <td>Sales</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>483</td>\n",
+       "      <td>118</td>\n",
+       "      <td>Sales</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sender  number_messages   department\n",
+       "0     605              392        Admin\n",
+       "1     509              145        Admin\n",
+       "2    1274               23        Admin\n",
+       "3     516                8  Engineering\n",
+       "4     370                4  Engineering\n",
+       "5    1879                4  Engineering\n",
+       "6    1500               12    Marketing\n",
+       "7    1299                3    Marketing\n",
+       "8     977                1    Marketing\n",
+       "9     221               18           IT\n",
+       "10   1054                7           IT\n",
+       "11    326                6           IT\n",
+       "12    598              162   Operations\n",
+       "13    586              144   Operations\n",
+       "14    317              141   Operations\n",
+       "15    144              153        Sales\n",
+       "16    128              145        Sales\n",
+       "17    483              118        Sales"
+      ]
+     },
+     "execution_count": 375,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# We continue using 'department_influence' dataframe, which is the filtered inter-departmental (not intra) messages sending data\n",
     "# Here we wanted to find who SENT the most messages to employees outside their own department (highest influencer in the department)\n",
@@ -5934,7 +6100,7 @@
   {
    "cell_type": "code",
    "execution_count": 356,
-   "id": "7ef4f529",
+   "id": "ae9d8f5a",
    "metadata": {},
    "outputs": [
     {
@@ -7052,7 +7218,7 @@
   {
    "cell_type": "code",
    "execution_count": 357,
-   "id": "de34bd1a",
+   "id": "b9b45bc2",
    "metadata": {},
    "outputs": [
     {
@@ -7189,7 +7355,7 @@
   {
    "cell_type": "code",
    "execution_count": 369,
-   "id": "8c0a1bc3",
+   "id": "8cfc06df",
    "metadata": {},
    "outputs": [
     {
@@ -8440,162 +8606,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
-   "id": "c6c5d9a3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sender</th>\n",
-       "      <th>receiver</th>\n",
-       "      <th>department_sender</th>\n",
-       "      <th>department_receiver</th>\n",
-       "      <th>message_length</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>79</td>\n",
-       "      <td>48</td>\n",
-       "      <td>Sales</td>\n",
-       "      <td>IT</td>\n",
-       "      <td>88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>144</td>\n",
-       "      <td>48</td>\n",
-       "      <td>Sales</td>\n",
-       "      <td>IT</td>\n",
-       "      <td>33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>144</td>\n",
-       "      <td>48</td>\n",
-       "      <td>Sales</td>\n",
-       "      <td>IT</td>\n",
-       "      <td>85</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>144</td>\n",
-       "      <td>48</td>\n",
-       "      <td>Sales</td>\n",
-       "      <td>IT</td>\n",
-       "      <td>69</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>144</td>\n",
-       "      <td>48</td>\n",
-       "      <td>Sales</td>\n",
-       "      <td>IT</td>\n",
-       "      <td>28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3507</th>\n",
-       "      <td>1881</td>\n",
-       "      <td>1079</td>\n",
-       "      <td>Sales</td>\n",
-       "      <td>Engineering</td>\n",
-       "      <td>22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3508</th>\n",
-       "      <td>1881</td>\n",
-       "      <td>1079</td>\n",
-       "      <td>Sales</td>\n",
-       "      <td>Engineering</td>\n",
-       "      <td>41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3509</th>\n",
-       "      <td>1881</td>\n",
-       "      <td>1079</td>\n",
-       "      <td>Sales</td>\n",
-       "      <td>Engineering</td>\n",
-       "      <td>28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3510</th>\n",
-       "      <td>1881</td>\n",
-       "      <td>1079</td>\n",
-       "      <td>Sales</td>\n",
-       "      <td>Engineering</td>\n",
-       "      <td>45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3511</th>\n",
-       "      <td>1881</td>\n",
-       "      <td>1079</td>\n",
-       "      <td>Sales</td>\n",
-       "      <td>Engineering</td>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2591 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      sender  receiver department_sender department_receiver  message_length\n",
-       "0         79        48             Sales                  IT              88\n",
-       "1        144        48             Sales                  IT              33\n",
-       "2        144        48             Sales                  IT              85\n",
-       "3        144        48             Sales                  IT              69\n",
-       "4        144        48             Sales                  IT              28\n",
-       "...      ...       ...               ...                 ...             ...\n",
-       "3507    1881      1079             Sales         Engineering              22\n",
-       "3508    1881      1079             Sales         Engineering              41\n",
-       "3509    1881      1079             Sales         Engineering              28\n",
-       "3510    1881      1079             Sales         Engineering              45\n",
-       "3511    1881      1079             Sales         Engineering              19\n",
-       "\n",
-       "[2591 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 370,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "department_influence"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 373,
-   "id": "9225f62c",
+   "id": "91c7ab09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8626,7 +8638,7 @@
   {
    "cell_type": "code",
    "execution_count": 374,
-   "id": "88f55acb",
+   "id": "05010ddb",
    "metadata": {},
    "outputs": [
     {
@@ -9744,7 +9756,7 @@
   {
    "cell_type": "code",
    "execution_count": 368,
-   "id": "d672c429",
+   "id": "edfdf6b1",
    "metadata": {},
    "outputs": [
     {
@@ -9957,7 +9969,7 @@
   {
    "cell_type": "code",
    "execution_count": 272,
-   "id": "bbde4cc0",
+   "id": "c271e236",
    "metadata": {},
    "outputs": [
     {
